src/main/kotlin/com/github/xepozz/robots_txt/language/parser/RobotsTxt.bnf
{
  parserClass = "com.github.xepozz.robots_txt.language.parser.RobotsTxtParser"

  extends = "com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix = "RobotsTxt"
  psiImplClassSuffix="Impl"
  psiPackage="com.github.xepozz.robots_txt.language.psi"
  psiImplPackage="com.github.xepozz.robots_txt.language.psi.impl"

  elementTypeHolderClass="com.github.xepozz.robots_txt.language.psi.RobotsTxtTypes"
  elementTypeClass = "com.github.xepozz.robots_txt.language.psi.RobotsTxtElementType"
  tokenTypeClass = "com.github.xepozz.robots_txt.language.psi.RobotsTxtTokenType"

  psiImplUtilClass="com.github.xepozz.robots_txt.language.psi.impl.RobotsTxtImplUtil"
}

file ::= entry*

private entry ::= rule | COMMENT | EOL

rule ::= directive DELIMITER value?
{
    pin=1
}

directive ::= TEXT
value ::= TEXT
{
    implements=["com.intellij.psi.PsiLiteralValue"]
    methods=[getValue getReferences]
}
